fix(button-group): fix styles when wrapped with tooltip

--- a/src/components/button-group/ButtonGroup.scss
+++ b/src/components/button-group/ButtonGroup.scss
@@ -3,6 +3,9 @@
 /**************************************
  * Button Group
  **************************************/
+
+// In the case where there is an element in between .btn and .bdl-ButtonGroup, you can add class .bdl-ButtonWrapper to parent of .btn
+
 .bdl-ButtonGroup {
     position: relative;
 
@@ -10,7 +13,7 @@
         display: inline;
 
         > .btn,
-        > .bdl-targeted-click-through > .btn {
+        > .bdl-ButtonWrapper > .btn {
             margin-left: 0;
             padding-right: 11px;
             padding-left: 11px;
@@ -41,7 +44,7 @@
     }
 
     > .btn,
-    > .bdl-targeted-click-through > .btn {
+    > .bdl-ButtonWrapper > .btn {
         margin: 5px 0 5px -1px;
         border-radius: 0;
 
@@ -63,19 +66,19 @@
     }
 
     > .btn:first-child,
-    > .bdl-targeted-click-through > .btn:first-child {
+    > .bdl-ButtonWrapper > .btn:first-child {
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
     }
 
     > .btn:last-child,
-    > .bdl-targeted-click-through > .btn:last-child {
+    > .bdl-ButtonWrapper > .btn:last-child {
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
     }
 
     > .btn.is-selected,
-    > .bdl-targeted-click-through > .btn.is-selected {
+    > .bdl-ButtonWrapper > .btn.is-selected {
         z-index: 2; /* place on top of siblings */
         color: $bdl-gray-80;
         background-color: $bdl-gray-10;
@@ -84,7 +87,7 @@
     }
 
     > .btn:focus,
-    > .bdl-targeted-click-through > .btn:focus {
+    > .bdl-ButtonWrapper > .btn:focus {
         z-index: 3; /* place on top of all other buttons for accessibility */
     }
 
@@ -92,7 +95,7 @@
     &.is-disabled {
         > .btn,
         > .bdl-Button,
-        > .bdl-targeted-click-through > .btn:focus {
+        > .bdl-ButtonWrapper > .btn:focus {
             color: $bdl-gray-62;
             background-color: $bdl-gray-02;
             border: 1px solid $bdl-gray-30;
@@ -102,7 +105,7 @@
         }
 
         > .btn-primary,
-        > .bdl-targeted-click-through > .btn-primary {
+        > .bdl-ButtonWrapper > .btn-primary {
             color: $white;
             background-color: $primary-color;
             border-color: $primary-color;
